Vietnamese translation update

--- a/po/vi.po
+++ b/po/vi.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2007-08-18 03:58+0300\n"
-"PO-Revision-Date: 2007-06-01 15:11+0930\n"
+"PO-Revision-Date: 2007-09-02 15:07+0930\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <vi-VN@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: LocFactoryEditor 1.6.3b1\n"
+"X-Generator: LocFactoryEditor 1.7b1\n"
 
 #: lib/compat.c:46
 msgid "unable to open tmpfile for vsnprintf"
@@ -274,7 +274,7 @@ msgstr "lỗi cài đặt « %.250s » như là « %.250s » chứa thông tin %
 
 #: lib/ehandle.c:81
 msgid "out of memory pushing error handler: "
-msgstr "hết bộ nhớ khi đầy bộ quản lý lỗi:"
+msgstr "hết bộ nhớ khi đầy bộ quản lý lỗi: "
 
 #: lib/ehandle.c:96
 #, c-format
@@ -819,14 +819,14 @@ msgid "failed to read `%s' at line %d"
 msgstr "lỗi đọc « %s » trên dòng %d"
 
 #: lib/parsehelp.c:41
-#, fuzzy, c-format
+#, c-format
 msgid "warning, in file `%.255s' near line %d"
-msgstr "%s, trong tập tin « %.255s » gần dòng %d"
+msgstr "cảnh báo, trong tập tin « %.255s » gần dòng %d"
 
 #: lib/parsehelp.c:44
-#, fuzzy, c-format
+#, c-format
 msgid "parse error, in file `%.255s' near line %d"
-msgstr "%s, trong tập tin « %.255s » gần dòng %d"
+msgstr "lỗi phân tách, trong tập tin « %.255s » gần dòng %d"
 
 #: lib/parsehelp.c:48
 #, c-format
@@ -925,9 +925,11 @@ msgid "error setting permissions of `%.255s'"
 msgstr "gặp lỗi khi đặt quyền hạn của « %.255s »"
 
 #: src/archives.c:339
-#, fuzzy, c-format
+#, c-format
 msgid "failed to stat (dereference) existing symlink `%.250s'"
-msgstr "không thể đặt quyền thực hiện cho « %.250s »"
+msgstr ""
+"lỗi lấy trạng thái về (gỡ bỏ tham chiếu đến) liên kết tượng trưng đã tồn tại "
+"« %.250s »"
 
 #: src/archives.c:360
 #, c-format
@@ -935,27 +937,28 @@ msgid ""
 "failed to stat (dereference) proposed new symlink target `%.250s' for "
 "symlink `%.250s'"
 msgstr ""
+"lỗi lấy trạng thái về (gỡ bỏ tham chiếu đến) đích liên kết tượng trưng mới "
+"đã đề nghị « %.250s » đối với liên kết tượng trưng « %.250s »"
 
 #: src/archives.c:411
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "trying to overwrite `%.250s', which is the diverted version of `"
 "%.250s' (package: %.100s)"
 msgstr ""
-"đang cố ghi đè lên « %.255s », phiên bản đã chuyển hướng của « %.255s »%.10s"
-"%.100s%.10s"
+"đang thử ghi đè lên « %.255s », phiên bản đã chuyển hướng của « %.255s "
+"» (gói: %.100s)"
 
 #: src/archives.c:417
-#, fuzzy, c-format
+#, c-format
 msgid "trying to overwrite `%.250s', which is the diverted version of `%.250s'"
 msgstr ""
-"đang cố ghi đè lên « %.255s », phiên bản đã chuyển hướng của « %.255s »%.10s"
-"%.100s%.10s"
+"đang thử ghi đè lên « %.255s », phiên bản đã chuyển hướng của « %.255s »"
 
 #: src/archives.c:440
 #, c-format
 msgid "unable to stat `%.255s' (which I was about to install)"
-msgstr "không thể lấy các thông tin về « %.255s » (mà tôi sắp cài đặt)"
+msgstr "không thể lấy trạng thái về « %.255s » (mà trình này sắp cài đặt)"
 
 #: src/archives.c:448
 #, c-format
@@ -970,8 +973,8 @@ msgstr ""
 #, c-format
 msgid "unable to stat restored `%.255s' before installing another version"
 msgstr ""
-"không thể lấy các thông tin về « %.255s » đã phục hồi trước khi cài đặt "
-"phiên bản khác"
+"không thể lấy trạng thái về « %.255s » đã phục hồi trước khi cài đặt phiên "
+"bản khác"
 
 #: src/archives.c:489
 #, c-format
@@ -1080,62 +1083,62 @@ msgid "unable to install new version of `%.255s'"
 msgstr "không thể cài đặt phiên bản mới của « %.255s »"
 
 #: src/archives.c:853
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: warning - ignoring dependency problem with %s:\n"
 "%s"
 msgstr ""
-"dpkg: cảnh báo : lờ đi vấn đề phụ thuộc với việc gỡ bỏ %s:\n"
+"dpkg: cảnh báo : lờ đi vấn đề phụ thuộc với %s:\n"
 "%s"
 
 #: src/archives.c:860
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: warning - considering deconfiguration of essential\n"
 " package %s, to enable %s.\n"
 msgstr ""
 "dpkg: cảnh báo : coi như hủy cấu hình của\n"
-"gói cốt yếu %s, để bật khả năng gỡ bỏ %s.\n"
+"gói cốt yếu %s, để hiệu lực %s.\n"
 
 #: src/archives.c:864
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: no, %s is essential, will not deconfigure\n"
 " it in order to enable %s.\n"
 msgstr ""
 "dpkg: không, %s là cốt yếu, sẽ không hủy\n"
-"cấu hình nó để bật khả năng gỡ bỏ %s.\n"
+"cấu hình nó để hiệu lực %s.\n"
 
 #: src/archives.c:878
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: no, cannot proceed with %s (--auto-deconfigure will help):\n"
 "%s"
 msgstr ""
-"dpkg: không, không thể gỡ bỏ %s (« --auto-deconfigure » [tự động hủy cấu "
+"dpkg: không, không thể tiếp tục %s (« --auto-deconfigure » [tự động hủy cấu "
 "hình] sẽ giúp):\n"
 "%s"
 
 #: src/archives.c:888
-#, fuzzy, c-format
+#, c-format
 msgid "removal of %.250s"
-msgstr "gặp lỗi đọc trong %.250s"
+msgstr "việc gỡ bỏ %.250s"
 
 #: src/archives.c:915
-#, fuzzy, c-format
+#, c-format
 msgid "installation of %.250s"
-msgstr "không thể cài đặt phiên bản mới của « %.255s »"
+msgstr "việc cài đặt %.255s"
 
 #: src/archives.c:916
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: considering deconfiguration of %s, which would be broken by %s ...\n"
-msgstr "dpkg: coi như gỡ bỏ %s để ủng hộ %s ...\n"
+msgstr "dpkg: coi như hủy cấu hình %s, mà sẽ bị %s vỡ ...\n"
 
 #: src/archives.c:923
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: yes, will deconfigure %s (broken by %s).\n"
-msgstr "dpkg: có, sẽ gỡ bỏ %s để ủng hộ %s.\n"
+msgstr "dpkg: có, sẽ hủy cấu hình %s (bị %s vỡ).\n"
 
 #: src/archives.c:927 src/archives.c:1048
 #, c-format
@@ -1147,9 +1150,9 @@ msgstr ""
 "%s"
 
 #: src/archives.c:935
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: warning - ignoring breakage, may proceed anyway !\n"
-msgstr "dpkg: cảnh báo : lờ đi trường hợp xung đột, vẫn có thể tiếp tục lại.\n"
+msgstr "dpkg: cảnh báo : lờ đi trường hợp vỡ, vẫn có thể tiếp tục lại.\n"
 
 #: src/archives.c:941
 #, c-format
@@ -1157,11 +1160,13 @@ msgid ""
 "installing %.250s would break %.250s, and\n"
 " deconfiguration is not permitted (--auto-deconfigure might help)"
 msgstr ""
+"cài đặt %.250s nên vỡ %.250s, cũng không cho phép\n"
+"hủy cấu hình (« --auto-deconfigure » [tự động hủy cấu hình] sẽ giúp)"
 
 #: src/archives.c:945
 #, c-format
 msgid "installing %.250s would break existing software"
-msgstr ""
+msgstr "cài đặt %.250s nên vỡ phần mềm đã có"
 
 #: src/archives.c:978
 #, c-format
@@ -2823,19 +2828,19 @@ msgid "  Package %s is not installed.\n"
 msgstr "  Chưa cài đặt gói %s.\n"
 
 #: src/packages.c:362
-#, fuzzy, c-format
+#, c-format
 msgid " %s (%s) breaks %s and is %s.\n"
-msgstr "  %.250s cung cấp %.250s và là %s.\n"
+msgstr " %s (%s) vỡ %s, cũng %s.\n"
 
 #: src/packages.c:370
-#, fuzzy, c-format
+#, c-format
 msgid "  %s (%s) provides %s.\n"
-msgstr "%s (tiến trình con): %s\n"
+msgstr "  %s (%s) cung cấp %s.\n"
 
 #: src/packages.c:375
-#, fuzzy, c-format
+#, c-format
 msgid "  Version of %s to be configured is %s.\n"
-msgstr "  Phiên bản của %s trên hệ thống là %s.\n"
+msgstr "  Phiên bản của %s cần cấu hình là %s.\n"
 
 #: src/packages.c:467
 msgid " depends on "
@@ -2965,14 +2970,14 @@ msgid "error trying to open %.250s"
 msgstr "gặp lỗi khi cố mở %.250s"
 
 #: src/processarc.c:405
-#, fuzzy, c-format
+#, c-format
 msgid "De-configuring %s, to allow removal of %s ...\n"
 msgstr "Đang huỷ cấu hình %s, để có khả năng gỡ bỏ %s ...\n"
 
 #: src/processarc.c:408
-#, fuzzy, c-format
+#, c-format
 msgid "De-configuring %s ...\n"
-msgstr "Đang gỡ bỏ %s ...\n"
+msgstr "Đang hủy cấu hình %s ...\n"
 
 #: src/processarc.c:479
 #, c-format
@@ -3127,22 +3132,22 @@ msgid "No packages found matching %s.\n"
 msgstr "Không tìm thấy gói khớp vơi %s.\n"
 
 #: src/query.c:254
-#, fuzzy, c-format
+#, c-format
 msgid "diversion by %s from: %s\n"
-msgstr "bị trệch bởi %s tới : %s\n"
+msgstr "bị trệch bởi %s từ : %s\n"
 
 #: src/query.c:256
-#, fuzzy, c-format
+#, c-format
 msgid "diversion by %s to: %s\n"
 msgstr "bị trệch bởi %s tới : %s\n"
 
 #: src/query.c:259
-#, fuzzy, c-format
+#, c-format
 msgid "local diversion from: %s\n"
-msgstr "trệch nội bộ"
+msgstr "trệch nội bộ từ : %s\n"
 
 #: src/query.c:260
-#, fuzzy, c-format
+#, c-format
 msgid "local diversion to: %s\n"
 msgstr "bị trệch nội bộ tới : %s\n"
 
