--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-02  Clytie Siddall  <clytie@riverland.net.au>
+
+	* vi.po: Updated to 929t
+
 2007-08-26  Shiva Prasad Pokharel  <pokharelshiv@gmail.com>
 
 	* ne.po: Updated to 903t23f3u. 
