German translation update

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-02  Sven Joachim  <svenjoac@gmx.de>
+
+	* de.po: Updated to 929t
+
 2007-09-02  Clytie Siddall  <clytie@riverland.net.au>
 
 	* vi.po: Updated to 929t
