--- a/debian/changelog
+++ b/debian/changelog
@@ -58,6 +58,7 @@ dpkg (1.14.6) UNRELEASED; urgency=low
   * Russian (Yuri Kozlov). Closes: #436147
   * Polish (Robert Luberda).
   * Vietnamese (Clytie Siddall). Closes: #440502
+  * German (Sven Joachim). Closes: #440537
 
   [ Updated dselect translations ]
   * Swedish (Peter Karlsson).
