French translation update

--- a/po/fr.po
+++ b/po/fr.po
@@ -879,14 +879,15 @@ msgid "failed to read `%s' at line %d"
 msgstr "échec de la lecture de « %s » à la ligne %d"
 
 #: lib/parsehelp.c:41
-#, fuzzy, c-format
+#, c-format
 msgid "warning, in file `%.255s' near line %d"
-msgstr "%s, dans le fichier « %.255s » près de la ligne %d"
+msgstr "avertissement, dans le fichier « %.255s » près de la ligne %d"
 
 #: lib/parsehelp.c:44
-#, fuzzy, c-format
+#, c-format
 msgid "parse error, in file `%.255s' near line %d"
-msgstr "%s, dans le fichier « %.255s » près de la ligne %d"
+msgstr ""
+"erreur d'analyse syntaxique, dans le fichier « %.255s » près de la ligne %d"
 
 #: lib/parsehelp.c:48
 #, c-format
@@ -984,9 +985,10 @@ msgid "error setting permissions of `%.255s'"
 msgstr "erreur de paramétrage des permissions de « %.255s »"
 
 #: src/archives.c:339
-#, fuzzy, c-format
+#, c-format
 msgid "failed to stat (dereference) existing symlink `%.250s'"
-msgstr "impossible de paramétrer les permissions en exécution sur « %.250s »"
+msgstr ""
+"impossible d'analyser (déréférencer) le lien symbolique existant « %.250s »"
 
 #: src/archives.c:360
 #, c-format
@@ -994,22 +996,24 @@ msgid ""
 "failed to stat (dereference) proposed new symlink target `%.250s' for "
 "symlink `%.250s'"
 msgstr ""
+"impossible d'analyser (déréférencer) la cible proposée du nouveau lien "
+"symbolique « %.250s » pour le lien symbolique « %.250s »"
 
 #: src/archives.c:411
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "trying to overwrite `%.250s', which is the diverted version of `"
 "%.250s' (package: %.100s)"
 msgstr ""
 "tentative de remplacement de « %.250s », qui est la version détournée de "
-"« %.250s » %.10s%.100s%.10s"
+"« %.250s » (paquet : %.100s)"
 
 #: src/archives.c:417
-#, fuzzy, c-format
+#, c-format
 msgid "trying to overwrite `%.250s', which is the diverted version of `%.250s'"
 msgstr ""
 "tentative de remplacement de « %.250s », qui est la version détournée de "
-"« %.250s » %.10s%.100s%.10s"
+"« %.250s »"
 
 #: src/archives.c:440
 #, c-format
@@ -1144,62 +1148,62 @@ msgid "unable to install new version of `%.255s'"
 msgstr "impossible d'installer une nouvelle version de « %.255s »"
 
 #: src/archives.c:853
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: warning - ignoring dependency problem with %s:\n"
 "%s"
 msgstr ""
-"dpkg : avertissement - problème de dépendance ignoré pendant la suppression "
-"de %s :\n"
+"dpkg : avertissement - problème de dépendance ignoré lors de %s :\n"
 "%s"
 
 #: src/archives.c:860
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: warning - considering deconfiguration of essential\n"
 " package %s, to enable %s.\n"
 msgstr ""
-"dpkg : avertissement - déconfigurer le paquet\n"
-" essentiel %s pour autoriser la suppression de %s.\n"
+"dpkg : avertissement - tentative de déconfiguration du paquet\n"
+" essentiel %s pour autoriser %s.\n"
 
 #: src/archives.c:864
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: no, %s is essential, will not deconfigure\n"
 " it in order to enable %s.\n"
 msgstr ""
 "dpkg : non, %s est essentiel, il ne sera pas déconfiguré\n"
-" pour autoriser la suppression de %s.\n"
+" pour autoriser %s.\n"
 
 #: src/archives.c:878
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: no, cannot proceed with %s (--auto-deconfigure will help):\n"
 "%s"
 msgstr ""
-"dpkg : non, impossible de retirer %s (voir --auto-deconfigure) :\n"
+"dpkg : non, impossible d'autoriser %s (voir --auto-deconfigure) :\n"
 "%s"
 
 #: src/archives.c:888
-#, fuzzy, c-format
+#, c-format
 msgid "removal of %.250s"
-msgstr "erreur de lecture dans %.250s"
+msgstr "suppression de %.250s"
 
 #: src/archives.c:915
-#, fuzzy, c-format
+#, c-format
 msgid "installation of %.250s"
-msgstr "impossible d'installer une nouvelle version de « %.255s »"
+msgstr "installation de %.250s"
 
 #: src/archives.c:916
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: considering deconfiguration of %s, which would be broken by %s ...\n"
-msgstr "dpkg : retirer %s en faveur de %s ...\n"
+msgstr ""
+"dpkg : tentative de déconfiguration de %s, qui serait cassé par %s ...\n"
 
 #: src/archives.c:923
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: yes, will deconfigure %s (broken by %s).\n"
-msgstr "dpkg : oui, suppression de %s en faveur de %s.\n"
+msgstr "dpkg : oui, déconfiguration de %s (cassé par %s).\n"
 
 #: src/archives.c:927 src/archives.c:1048
 #, c-format
@@ -1211,9 +1215,9 @@ msgstr ""
 "%s"
 
 #: src/archives.c:935
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: warning - ignoring breakage, may proceed anyway !\n"
-msgstr "dpkg : avertissement - conflit ignoré, poursuite possible !\n"
+msgstr "dpkg : avertissement - cassure ignorée, poursuite possible !\n"
 
 #: src/archives.c:941
 #, c-format
@@ -1221,11 +1225,14 @@ msgid ""
 "installing %.250s would break %.250s, and\n"
 " deconfiguration is not permitted (--auto-deconfigure might help)"
 msgstr ""
+"l'installation de %.250s casserait %.250s\n"
+" et la déconfiguration n'est pas autorisée (--auto-deconfigure pourrait "
+"aider)"
 
 #: src/archives.c:945
 #, c-format
 msgid "installing %.250s would break existing software"
-msgstr ""
+msgstr "l'installation de %.250s casserait un logiciel existant"
 
 #: src/archives.c:978
 #, c-format
@@ -2875,19 +2882,19 @@ msgid "  Package %s is not installed.\n"
 msgstr "  Le paquet %s n'est pas installé.\n"
 
 #: src/packages.c:362
-#, fuzzy, c-format
+#, c-format
 msgid " %s (%s) breaks %s and is %s.\n"
-msgstr "  %.250s fournit %.250s et est %s.\n"
+msgstr " %s (%s) casse %s et est %s.\n"
 
 #: src/packages.c:370
-#, fuzzy, c-format
+#, c-format
 msgid "  %s (%s) provides %s.\n"
-msgstr "%s (sous-processus) : %s\n"
+msgstr "%s (%s) fournit %s.\n"
 
 #: src/packages.c:375
-#, fuzzy, c-format
+#, c-format
 msgid "  Version of %s to be configured is %s.\n"
-msgstr "  La version de %s sur le système est %s.\n"
+msgstr "  La version de %s à configurer est %s.\n"
 
 #: src/packages.c:467
 msgid " depends on "
@@ -3021,14 +3028,14 @@ msgid "error trying to open %.250s"
 msgstr "erreur survenue en essayant d'ouvrir %.250s"
 
 #: src/processarc.c:405
-#, fuzzy, c-format
+#, c-format
 msgid "De-configuring %s, to allow removal of %s ...\n"
 msgstr "Déconfiguration de %s, pour pouvoir supprimer %s ...\n"
 
 #: src/processarc.c:408
-#, fuzzy, c-format
+#, c-format
 msgid "De-configuring %s ...\n"
-msgstr "Suppression de %s ...\n"
+msgstr "Déconfiguration de %s ...\n"
 
 #: src/processarc.c:479
 #, c-format
@@ -3193,24 +3200,24 @@ msgid "No packages found matching %s.\n"
 msgstr "Aucun paquet ne correspond à %s.\n"
 
 #: src/query.c:254
-#, fuzzy, c-format
+#, c-format
 msgid "diversion by %s from: %s\n"
-msgstr "détourné par %s vers : %s\n"
+msgstr "détournement par %s depuis : %s\n"
 
 #: src/query.c:256
-#, fuzzy, c-format
+#, c-format
 msgid "diversion by %s to: %s\n"
-msgstr "détourné par %s vers : %s\n"
+msgstr "détournement par %s en : %s\n"
 
 #: src/query.c:259
-#, fuzzy, c-format
+#, c-format
 msgid "local diversion from: %s\n"
-msgstr "détournement local"
+msgstr "détournement local depuis : %s\n"
 
 #: src/query.c:260
-#, fuzzy, c-format
+#, c-format
 msgid "local diversion to: %s\n"
-msgstr "détourné localement en : %s\n"
+msgstr "détournement localement en : %s\n"
 
 #: src/query.c:285
 msgid "--search needs at least one file name pattern argument"
