--- a/debian/changelog
+++ b/debian/changelog
@@ -59,6 +59,7 @@ dpkg (1.14.6) UNRELEASED; urgency=low
   * Polish (Robert Luberda).
   * Vietnamese (Clytie Siddall). Closes: #440502
   * German (Sven Joachim). Closes: #440537
+  * French (Frédéric Bothamy).
 
   [ Updated dselect translations ]
   * Swedish (Peter Karlsson).
