--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-04  Frédéric Bothamy  <frederic.bothamy@free.fr>
+
+	* fr.po: Updated to 929t
+
 2007-09-02  Sven Joachim  <svenjoac@gmx.de>
 
 	* de.po: Updated to 929t
