Properly override Homepage field from binary package stanzas

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-05  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-gencontrol.pl: Properly override Homepage field from
+	binary package stanzas.
+
 2007-08-31  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-deb/build.c (arbitrary_fields): Add Tag.
