--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-09-05  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Release 1.14.6.
+
+2007-09-05  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-gencontrol.pl: Properly override Homepage field from
 	binary package stanzas.
 
