--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.6) UNRELEASED; urgency=low
+dpkg (1.14.6) unstable; urgency=low
 
   [ Frank Lichtenheld ]
   * Synchronise usage information of dpkg, dpkg-deb, and
@@ -53,24 +53,24 @@ dpkg (1.14.6) UNRELEASED; urgency=low
 
   [ Updated dpkg translations ]
   * Dzongkha (Tshewang Norbu). Closes: #430931
-  * Swedish (Peter Karlsson).
-  * Nepali (Shiva Prasad Pokharel). Closes: #435353, #437825
-  * Russian (Yuri Kozlov). Closes: #436147
-  * Polish (Robert Luberda).
-  * Vietnamese (Clytie Siddall). Closes: #440502
-  * German (Sven Joachim). Closes: #440537
   * French (Frédéric Bothamy).
+  * German (Sven Joachim). Closes: #440537
+  * Nepali (Shiva Prasad Pokharel). Closes: #435353, #437825
+  * Polish (Robert Luberda).
+  * Russian (Yuri Kozlov). Closes: #436147
+  * Swedish (Peter Karlsson).
+  * Vietnamese (Clytie Siddall). Closes: #440502
 
   [ Updated dselect translations ]
-  * Swedish (Peter Karlsson).
   * Russian (Yuri Kozlov). Closes: #436149
+  * Swedish (Peter Karlsson).
 
   [ Updated man pages translations ]
   * German (Helge Kreutzmann).
-  * Swedish (Peter Karlsson).
   * Polish (Robert Luberda).
+  * Swedish (Peter Karlsson).
 
- -- Frank Lichtenheld <djpig@debian.org>  Tue, 03 Jul 2007 01:47:56 +0200
+ -- Guillem Jover <guillem@debian.org>  Wed, 05 Sep 2007 07:36:02 +0300
 
 dpkg (1.14.5) unstable; urgency=low
 
