--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-05  Piarres Beobide  <pi@beobide.net>
+
+	* eu.po: Updated to 929t
+
 2007-09-04  Frédéric Bothamy  <frederic.bothamy@free.fr>
 
 	* fr.po: Updated to 929t
