--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-04  Peter Karlsson  <peterk@debian.org>
+
+	* po/sv.po: Updated to 1289t.
+
 2007-09-05  Guillem Jover  <guillem@debian.org>
 
 	* po/dpkg-man.pot: Regenerated.
