--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-06  Guillem Jover  <guillem@debian.org>
+
+	* configure.ac: Bump version to 1.14.7~.
+
 2007-09-05  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Release 1.14.6.
