--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.14.7) UNRELEASED; urgency=low
+
+  *
+
+ -- Guillem Jover <guillem@debian.org>  Thu, 06 Sep 2007 03:42:40 +0300
+
 dpkg (1.14.6) unstable; urgency=low
 
   [ Frank Lichtenheld ]
