Try to match history with reality
Few translation commits did not make into the release although they had
been already committed to the repository.

Add a changelog entry for Swedish man page translation.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,12 @@
 dpkg (1.14.7) UNRELEASED; urgency=low
 
-  *
+  [ Updated dpkg translations ]
+  * German (Sven Joachim). Closes: #440537
+  * Nepali (Shiva Prasad Pokharel). Closes: #437825
+  * Vietnamese (Clytie Siddall). Closes: #440502
+
+  [ Updated man pages translations ]
+  * Swedish (Peter Karlsson).
 
  -- Guillem Jover <guillem@debian.org>  Thu, 06 Sep 2007 03:42:40 +0300
 
@@ -60,12 +66,10 @@ dpkg (1.14.6) unstable; urgency=low
   [ Updated dpkg translations ]
   * Dzongkha (Tshewang Norbu). Closes: #430931
   * French (Frédéric Bothamy).
-  * German (Sven Joachim). Closes: #440537
-  * Nepali (Shiva Prasad Pokharel). Closes: #435353, #437825
+  * Nepali (Shiva Prasad Pokharel). Closes: #435353
   * Polish (Robert Luberda).
   * Russian (Yuri Kozlov). Closes: #436147
   * Swedish (Peter Karlsson).
-  * Vietnamese (Clytie Siddall). Closes: #440502
 
   [ Updated dselect translations ]
   * Russian (Yuri Kozlov). Closes: #436149
