Add back $dpkglib into @INC, needed by the controllib.pl require in 822-date

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-09-06  Guillem Jover  <guillem@debian.org>
 
+	* scripts/822-date.pl: Add $dpkglib into @INC, needed by the
+	controllib.pl require.
+
+2007-09-06  Guillem Jover  <guillem@debian.org>
+
 	* configure.ac: Bump version to 1.14.7~.
 
 2007-09-05  Guillem Jover  <guillem@debian.org>
