--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ dpkg (1.14.7) UNRELEASED; urgency=low
   [ Guillem Jover ]
   * Add back $dpkglib into @INC, needed by the controllib.pl require in
     822-date. Closes: #440962
+  * Document in dpkg-scanpackages that apt now requires Packages.bz2 instead
+    of Packages.gz. Closes: #440973
 
   [ Updated dpkg translations ]
   * German (Sven Joachim). Closes: #440537
