--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-06  Guillem Jover  <guillem@debian.org>
+
+	* dpkg-scanpackages.1: Replace gzip with bzip2 as the requirement for
+	compressed Packages files for apt.
+
 2007-09-04  Peter Karlsson  <peterk@debian.org>
 
 	* po/sv.po: Updated to 1289t.
