Make %fieldimps private to controllib.pl

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2007-09-06  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-genchanges.pl (%fieldimps): Remove unused variable.
+	* scripts/dpkg-gencontrol.pl (%fieldimps): Likewise.
+	* scripts/dpkg-source.pl (%fieldimps): Likewise.
+	* scripts/controllib.pl (%fieldimps): Switch from 'our' to 'my'.
+
+2007-09-06  Guillem Jover  <guillem@debian.org>
+
 	* scripts/822-date.pl: Add $dpkglib into @INC, needed by the
 	controllib.pl require.
 
