Stop recognizing the obsolete Optional field when building packages

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2007-09-06  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-genchanges.pl: Stop recognizing the obsolete Optional
+	field.
+	* scripts/dpkg-gencontrol.pl: Likewise.
+	* scripts/dpkg-source.pl: Likewise.
+
+2007-09-06  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-name.sh: Avoid escaped quotes messing with syntax
 	highlighting by using $() instead of backticks.
 	* scripts/dpkg-buildpackage.sh: Likewise.
