--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ dpkg (1.14.7) UNRELEASED; urgency=low
     of Packages.gz. Closes: #440973
 
   [ Updated dpkg translations ]
+  * Portuguese (Miguel Figueiredo).
   * German (Sven Joachim). Closes: #440537
   * Nepali (Shiva Prasad Pokharel). Closes: #437825
   * Vietnamese (Clytie Siddall). Closes: #440502
