--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ dpkg (1.14.7) UNRELEASED; urgency=low
   * German (Sven Joachim). Closes: #440537
   * Nepali (Shiva Prasad Pokharel). Closes: #437825
   * Vietnamese (Clytie Siddall). Closes: #440502
+  * Danish (Claus Hindsgaul). Closes: #441106
 
   [ Updated man pages translations ]
   * Swedish (Peter Karlsson).
