--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-07  Claus Hindsgaul  <claus.hindsgaul@gmail.com>
+
+	* da.po: Updated to 929t
+
 2007-09-06  Miguel Figueiredo <elmig@debianpt.org>
 
 	* pt.po: Updated to 929t
