--- a/po/da.po
+++ b/po/da.po
@@ -4,13 +4,13 @@
 #
 # Claus Hindsgaul <claus_h@image.dk>, 2002, 2004, 2005, 2006.
 # reviewed by Ole Laursen <olau@hardworking.dk>, 2002.
-# Claus Hindsgaul <claus.hindsgaul@gmail.com>, 2006.
+# Claus Hindsgaul <claus.hindsgaul@gmail.com>, 2006, 2007.
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg_1.10.19_da\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2007-08-18 03:58+0300\n"
-"PO-Revision-Date: 2006-10-06 20:39+0200\n"
+"PO-Revision-Date: 2007-09-06 22:02+0200\n"
 "Last-Translator: Claus Hindsgaul <claus.hindsgaul@gmail.com>\n"
 "Language-Team: Danish\n"
 "MIME-Version: 1.0\n"
@@ -62,9 +62,9 @@ msgid "Signal no.%d"
 msgstr "Signal nr. %d"
 
 #: lib/compression.c:34
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec '%s %s'"
-msgstr "%s: kunne ikke eksekvere 'gzip' %s"
+msgstr "%s: kunne ikke eksekvere '%s %s'"
 
 #: lib/compression.c:62
 #, c-format
@@ -802,14 +802,14 @@ msgid "failed to read `%s' at line %d"
 msgstr "kunne ikke læse '%s' ved linje %d"
 
 #: lib/parsehelp.c:41
-#, fuzzy, c-format
+#, c-format
 msgid "warning, in file `%.255s' near line %d"
-msgstr "%s, i filen '%.255s' nær linje %d"
+msgstr "advarsel, i filen '%.255s' nær linje %d"
 
 #: lib/parsehelp.c:44
-#, fuzzy, c-format
+#, c-format
 msgid "parse error, in file `%.255s' near line %d"
-msgstr "%s, i filen '%.255s' nær linje %d"
+msgstr "fortolkningsfejl, i filen '%.255s' nær linje %d"
 
 #: lib/parsehelp.c:48
 #, c-format
@@ -906,9 +906,9 @@ msgid "error setting permissions of `%.255s'"
 msgstr "fejl ved indstilling af filrettigheder for '%.255s'"
 
 #: src/archives.c:339
-#, fuzzy, c-format
+#, c-format
 msgid "failed to stat (dereference) existing symlink `%.250s'"
-msgstr "kunne ikke sætte eksekveringsrettigheder for '%.250s'"
+msgstr "kunne ikke følge den eksisterende symbolske lænke '%.250s'"
 
 #: src/archives.c:360
 #, c-format
@@ -916,22 +916,22 @@ msgid ""
 "failed to stat (dereference) proposed new symlink target `%.250s' for "
 "symlink `%.250s'"
 msgstr ""
+"kunne ikke følge det foreslåede mål `%.250s' for den symbolske lænke `%.250s'"
 
 #: src/archives.c:411
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "trying to overwrite `%.250s', which is the diverted version of `"
 "%.250s' (package: %.100s)"
 msgstr ""
 "forsøger at overskrive '%.250s', som er den omdirigerede version af "
-"'%.250s'%.10s%.100s%.10s"
+"'%.250s'(pakke: %.100s)"
 
 #: src/archives.c:417
-#, fuzzy, c-format
+#, c-format
 msgid "trying to overwrite `%.250s', which is the diverted version of `%.250s'"
 msgstr ""
-"forsøger at overskrive '%.250s', som er den omdirigerede version af "
-"'%.250s'%.10s%.100s%.10s"
+"forsøger at overskrive '%.250s', som er den omdirigerede version af `%.250s'"
 
 #: src/archives.c:440
 #, c-format
@@ -1057,61 +1057,62 @@ msgid "unable to install new version of `%.255s'"
 msgstr "kunne ikke installere ny version af '%.255s'"
 
 #: src/archives.c:853
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: warning - ignoring dependency problem with %s:\n"
 "%s"
 msgstr ""
-"dpkg: advarsel - ignorerer afhængighedsproblem ved afinstallation af %s:\n"
+"dpkg: advarsel - ignorerer afhængighedsproblem med %s:\n"
 "%s"
 
 #: src/archives.c:860
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: warning - considering deconfiguration of essential\n"
 " package %s, to enable %s.\n"
 msgstr ""
 "dpkg: advarsel - overvejer dekonfigurering af den essentielle\n"
-" pakke %s for at muliggøre afinstallation af %s.\n"
+" pakke %s for at muliggøre %s.\n"
 
 #: src/archives.c:864
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: no, %s is essential, will not deconfigure\n"
 " it in order to enable %s.\n"
 msgstr ""
 "dpkg: nej, %s er essentiel, vil ikke dekonfigurere\n"
-" for at muliggøre afinstallation af %s.\n"
+" den for at muliggøre %s.\n"
 
 #: src/archives.c:878
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: no, cannot proceed with %s (--auto-deconfigure will help):\n"
 "%s"
 msgstr ""
-"dpkg: nej, kan ikke afinstallere %s (--auto-deconfigure ville hjælpe):\n"
+"dpkg: nej, kan ikke fortsætte med %s (--auto-deconfigure vil hjælpe):\n"
 "%s"
 
 #: src/archives.c:888
-#, fuzzy, c-format
+#, c-format
 msgid "removal of %.250s"
-msgstr "læsefejl i %.250s"
+msgstr "afinstallation af %.250s"
 
 #: src/archives.c:915
-#, fuzzy, c-format
+#, c-format
 msgid "installation of %.250s"
-msgstr "kunne ikke installere ny version af '%.255s'"
+msgstr "installation af %.255s"
 
 #: src/archives.c:916
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: considering deconfiguration of %s, which would be broken by %s ...\n"
-msgstr "dpkg: overvejer at afinstallere %s til fordel for %s...\n"
+msgstr ""
+"dpkg: overvejer at dekonfigurere %s, som ville være i konflikt med %s ...\n"
 
 #: src/archives.c:923
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: yes, will deconfigure %s (broken by %s).\n"
-msgstr "dpkg: ja, vil afinstallere %s fil fordel for %s.\n"
+msgstr "dpkg: ja, vil afkonfigurere %s (i konflikt med %s).\n"
 
 #: src/archives.c:927 src/archives.c:1048
 #, c-format
@@ -1123,9 +1124,10 @@ msgstr ""
 "%s"
 
 #: src/archives.c:935
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: warning - ignoring breakage, may proceed anyway !\n"
-msgstr "dpkg: advarsel - ignorerer konflikt og fortsætter alligevel.\n"
+msgstr ""
+"dpkg: advarsel - ignorerer konflikt, kan muligvis fortsætte alligevel !\n"
 
 #: src/archives.c:941
 #, c-format
@@ -1133,11 +1135,14 @@ msgid ""
 "installing %.250s would break %.250s, and\n"
 " deconfiguration is not permitted (--auto-deconfigure might help)"
 msgstr ""
+"installation af %.250s ville være i konflikt med %.250s, og\n"
+" dekonfiguration er ikke tilladt (--auto-deconfigure kan hjælpe)"
 
 #: src/archives.c:945
 #, c-format
 msgid "installing %.250s would break existing software"
 msgstr ""
+"installation af %.250s ville være i konflikt med eksisterende programmer"
 
 #: src/archives.c:978
 #, c-format
@@ -1171,7 +1176,7 @@ msgstr "dpkg: pakken %s kræver geninstallation. Afinstalleres ikke.\n"
 #: src/archives.c:1034
 #, c-format
 msgid "package %s has too many Conflicts/Replaces pairs"
-msgstr ""
+msgstr "pakken %s har for mange Conflicts/Replaces-par"
 
 #: src/archives.c:1040
 #, c-format
@@ -1621,39 +1626,39 @@ msgid "unable to check for existence of `%.250s'"
 msgstr "kunne ikke tjekke eksistensen af '%.250s'"
 
 #: src/depcon.c:156
-#, fuzzy, c-format
+#, c-format
 msgid "%s depends on %s"
-msgstr " afhænger af "
+msgstr "%s afhænger af %s"
 
 #: src/depcon.c:159
-#, fuzzy, c-format
+#, c-format
 msgid "%s pre-depends on %s"
-msgstr " afhænger i forvejen af "
+msgstr "%s afhænger i forvejen af %s"
 
 #: src/depcon.c:162
-#, fuzzy, c-format
+#, c-format
 msgid "%s recommends %s"
-msgstr " anbefaler "
+msgstr "%s anbefaler %s"
 
 #: src/depcon.c:165
-#, fuzzy, c-format
+#, c-format
 msgid "%s suggests %s"
-msgstr " foreslår "
+msgstr "%s foreslår %s"
 
 #: src/depcon.c:168
-#, fuzzy, c-format
+#, c-format
 msgid "%s breaks %s"
-msgstr " ødelægger "
+msgstr "%s er i konflikt med %s"
 
 #: src/depcon.c:171
-#, fuzzy, c-format
+#, c-format
 msgid "%s conflicts with %s"
-msgstr " er i konflikt med "
+msgstr "%s er i konflikt med %s"
 
 #: src/depcon.c:174
-#, fuzzy, c-format
+#, c-format
 msgid "%s enhances %s"
-msgstr " forbedrer "
+msgstr "%s forbedrer %s"
 
 #: src/depcon.c:265
 #, c-format
@@ -2361,8 +2366,8 @@ msgstr ""
 "installeret.\n"
 "  -G|--refuse-downgrade      Spring over pakker med tidligere version ned "
 "den installerede.\n"
-"  -B|--auto-deconfigure      Installér selvom det skulle ødelægge andre "
-"pakker.\n"
+"  -B|--auto-deconfigure      Installér selvom det skulle være i konfligt med "
+"andre pakker.\n"
 "  --no-debsig                Forsøg ikke at verificere pakkesignaturer.\n"
 "  --no-act|--dry-run|--simulate\n"
 "                             Vis kun, hvad der ville ske - uden at gøre det\n"
@@ -2660,12 +2665,12 @@ msgstr ""
 #: src/packages.c:269
 #, c-format
 msgid "  Package %s which provides %s is to be removed.\n"
-msgstr "  Pakken %s, som giver %s, skal til at blive fjernet.\n"
+msgstr "  Pakken %s, som giver %s, skal til at blive afinstalleret.\n"
 
 #: src/packages.c:272
 #, c-format
 msgid "  Package %s is to be removed.\n"
-msgstr "  Pakken %s skal til at blive fjernet.\n"
+msgstr "  Pakken %s skal til at blive afinstalleret.\n"
 
 #: src/packages.c:287
 #, c-format
@@ -2698,19 +2703,19 @@ msgid "  Package %s is not installed.\n"
 msgstr "  Pakken '%s' er ikke installeret.\n"
 
 #: src/packages.c:362
-#, fuzzy, c-format
+#, c-format
 msgid " %s (%s) breaks %s and is %s.\n"
-msgstr "  %.250s giver %.250s og er %s.\n"
+msgstr "  %s (%s) er i konflikt med %s og er %s.\n"
 
 #: src/packages.c:370
-#, fuzzy, c-format
+#, c-format
 msgid "  %s (%s) provides %s.\n"
-msgstr "%s (underproces): %s\n"
+msgstr "  %s (%s) tilbyder %s.\n"
 
 #: src/packages.c:375
-#, fuzzy, c-format
+#, c-format
 msgid "  Version of %s to be configured is %s.\n"
-msgstr "  Version af %s på systemet er %s.\n"
+msgstr "  Versionen af %s, der skal sætte op, er %s.\n"
 
 #: src/packages.c:467
 msgid " depends on "
@@ -2839,14 +2844,14 @@ msgid "error trying to open %.250s"
 msgstr "fejl ved forsøg på at åbne %.250s"
 
 #: src/processarc.c:405
-#, fuzzy, c-format
+#, c-format
 msgid "De-configuring %s, to allow removal of %s ...\n"
-msgstr "Dekonfigurerer %s, så vi kan afinstallere %s...\n"
+msgstr "Dekonfigurerer %s, så %s kan afinstalleres...\n"
 
 #: src/processarc.c:408
-#, fuzzy, c-format
+#, c-format
 msgid "De-configuring %s ...\n"
-msgstr "Afinstallerer %s...\n"
+msgstr "Dekonfigurerer %s...\n"
 
 #: src/processarc.c:479
 #, c-format
@@ -2896,13 +2901,13 @@ msgid "unable to stat other new file `%.250s'"
 msgstr "kunne ikke tilgå den anden ny fil '%.250s'"
 
 #: src/processarc.c:684
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: warning - old file `%.250s' is the same as several new files!  (both `"
 "%.250s' and `%.250s')\n"
 msgstr ""
-"dpkg: advarsel - gammel fil '%.250s' er den samme som adskillige nye filer!  "
-"(både %.250s' og'%.250s')"
+"dpkg: advarsel - den gamle fil '%.250s' er den samme som adskillige nye "
+"filer!  (både %.250s' og'%.250s')\n"
 
 #: src/processarc.c:725
 #, c-format
@@ -3003,24 +3008,24 @@ msgid "No packages found matching %s.\n"
 msgstr "Ingen pakker passede med %s.\n"
 
 #: src/query.c:254
-#, fuzzy, c-format
+#, c-format
 msgid "diversion by %s from: %s\n"
-msgstr "omdirigeret af %s til %s\n"
+msgstr "omdirigeret af %s fra: %s\n"
 
 #: src/query.c:256
-#, fuzzy, c-format
+#, c-format
 msgid "diversion by %s to: %s\n"
-msgstr "omdirigeret af %s til %s\n"
+msgstr "omdirigeret af %s til: %s\n"
 
 #: src/query.c:259
-#, fuzzy, c-format
+#, c-format
 msgid "local diversion from: %s\n"
-msgstr "lokal omrokering"
+msgstr "lokal omrokering fra: %s\n"
 
 #: src/query.c:260
-#, fuzzy, c-format
+#, c-format
 msgid "local diversion to: %s\n"
-msgstr "lokalt omdirigeret til: %s\n"
+msgstr "lokal omdirigering til: %s\n"
 
 #: src/query.c:285
 msgid "--search needs at least one file name pattern argument"
@@ -3368,7 +3373,7 @@ msgstr "dpkg-deb - fejl: %s ('%s') indeholder ingen tal\n"
 #: dpkg-deb/build.c:111
 #, c-format
 msgid "file name '%.50s...' is too long"
-msgstr ""
+msgstr "filnavn '%.50s...' er for langt"
 
 #: dpkg-deb/build.c:172
 msgid "--build needs a directory argument"
@@ -3707,7 +3712,7 @@ msgid ""
 "dpkg-deb:    corrupted by being downloaded in ASCII mode\n"
 msgstr ""
 "dpkg-deb: filen ser ud til at være et arkiv, der er blevet\n"
-"dpkg-deb:    ødelagt ved at blive nedhentet i ASCII-tilstand\n"
+"dpkg-deb:    ødelagt af at blive nedhentet i ASCII-tilstand\n"
 
 #: dpkg-deb/extract.c:227
 #, c-format
@@ -3934,7 +3939,7 @@ msgstr ""
 "\n"
 
 #: dpkg-deb/main.c:85
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Options:\n"
 "  --showformat=<format>            Use alternative format for --show.\n"
@@ -3953,12 +3958,13 @@ msgstr ""
 "  --showformat=<format>      Brug alternativt format til --show\n"
 "  -D                         Vis aflusningsdata\n"
 "  --old, --new               Vælg arkivformat.\n"
-"  --nocheck                  Undertryk kontrolfiltjek (opbyg ugyldige "
-"pakker).\n"
+"  --nocheck                  Undertryk kontrolfiltjek (opbyg "
+"ugyldige                              pakker).\n"
 "  -z#                        Angiv komprimeringsniveau ved opbygningen\n"
-"  -E<type>                   Angiv den kompressionstype, der skal bruges "
+"  -Z<type>                   Angiv den kompressionstype, der skal bruges "
 "under\n"
-"                             bygning. Tilladte værdier: gzip, bzip2, none.\n"
+"                             bygning. Tilladte værdier: gzip, bzip2, lzma, "
+"none.\n"
 "\n"
 
 #: dpkg-deb/main.c:106
@@ -4546,9 +4552,9 @@ msgstr ""
 
 #: scripts/dpkg-divert.pl:74 scripts/dpkg-statoverride.pl:56
 #: scripts/update-alternatives.pl:229
-#, fuzzy, perl-format
+#, perl-format
 msgid "two commands specified: %s and --%s"
-msgstr "to tilstande angivet: %s og --%s"
+msgstr "to kommandoer angivet: %s og --%s"
 
 #: scripts/dpkg-divert.pl:107
 #, perl-format
@@ -4635,7 +4641,7 @@ msgid ""
 "  found `%s'"
 msgstr ""
 "modstrid i omrokér-til\n"
-"  under fjernelse af '%s'\n"
+"  under afinstallation af '%s'\n"
 "  fandt '%s'"
 
 #: scripts/dpkg-divert.pl:169
@@ -4646,7 +4652,7 @@ msgid ""
 "  found `%s'"
 msgstr ""
 "modstrid i pakke\n"
-"  under fjernelse af '%s'\n"
+"  under afinstallation af '%s'\n"
 "  fandt '%s'"
 
 #: scripts/dpkg-divert.pl:171
@@ -5109,7 +5115,7 @@ msgstr ""
 "Copyright (C) 2000-2002 Wichert Akkerman."
 
 #: scripts/update-alternatives.pl:74
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "Usage: %s [<option> ...] <command>\n"
 "\n"
@@ -5166,7 +5172,7 @@ msgstr ""
 "  --set <navn> <sti>       sæt <sti> som alternativ til <navn>.\n"
 "  --all                    kald --config for alle alternativer.\n"
 "\n"
-"<lænke> er den symbolske lænke, der peger på /etc/alternatives/<navn>.\n"
+"<lænke> er den symbolske lænke, der peger på %s/<navn>.\n"
 "  (f.eks. /usr/bin/pager)\n"
 "<navn> er på denne lænkegruppes hovednavn.\n"
 "  (f.eks. pager)\n"
@@ -5187,7 +5193,7 @@ msgstr ""
 
 #: scripts/update-alternatives.pl:127
 msgid "invalid update mode"
-msgstr ""
+msgstr "ugyldig opdateringstilstand"
 
 #: scripts/update-alternatives.pl:131
 #, perl-format
@@ -5476,13 +5482,13 @@ msgstr ""
 " %s, eller ikke eksistere. readlink mislykkedes: %s"
 
 #: scripts/update-alternatives.pl:632
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "There is no program which provides %s.\n"
 "Nothing to configure.\n"
 msgstr ""
-"Der er kun et enkelt program, der giver %s\n"
-"(%s). Intet at sætte op.\n"
+"Der er intet program, der giver %s\n"
+"Intet at sætte op.\n"
 
 #: scripts/update-alternatives.pl:638
 #, perl-format
