Use fakeroot by default to gain root privileges in dpkg-buildpackage

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-08  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-buildpackage.sh: Use fakeroot, if present, as default
+	value for the '-r' option.
+
 2007-09-06  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-genchanges.pl: Stop recognizing the obsolete Optional
