--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ dpkg (1.14.7) UNRELEASED; urgency=low
   * Document in dpkg-scanpackages that apt now requires Packages.bz2 instead
     of Packages.gz. Closes: #440973
   * Stop recognizing the obsolete Optional field when building packages.
+  * Use fakeroot, if present, by default to gain root privileges in
+    dpkg-buildpackage.
 
   [ Updated dpkg translations ]
   * Portuguese (Miguel Figueiredo).
