Fix typos in man pages

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-08  A. Costa  <agcosta@gis.net>
+
+	* dpkg-deb.1: Fix typo ('seperated' -> 'separated').
+	* start-stop-daemon.8: Fix typo ('themself' -> 'themselves').
+
 2007-09-06  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-scanpackages.1: Replace gzip with bzip2 as the requirement for
