--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ dpkg (1.14.7) UNRELEASED; urgency=low
   * Stop recognizing the obsolete Optional field when building packages.
   * Use fakeroot, if present, by default to gain root privileges in
     dpkg-buildpackage.
+  * Fix typos in dpkg-deb.1 and start-stop-daemon.8. Closes: #441051
+    Thanks to A. Costa.
 
   [ Updated dpkg translations ]
   * Portuguese (Miguel Figueiredo).
