--- a/man/start-stop-daemon.8
+++ b/man/start-stop-daemon.8
@@ -1,4 +1,4 @@
-.TH start\-stop\-daemon 8 "2007-03-06" "Debian Project" "dpkg utilities"
+.TH start\-stop\-daemon 8 "2007-09-08" "Debian Project" "dpkg utilities"
 .SH NAME
 start\-stop\-daemon \- start and stop system daemon programs
 .
@@ -213,7 +213,7 @@ cannot check the exit status if the process fails to execute for
 .B any
 reason. This is a last resort, and is only meant for programs that either
 make no sense forking on their own, or where it's not feasible to add the
-code for them to do this themself.
+code for them to do this themselves.
 .TP
 .BR \-N ", " \-\-nicelevel " \fIint\fP"
 This alters the priority of the process before starting it.
