Packages.bz2 are the preferred alternative to Packages.gz for apt

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-08  Guillem Jover  <guillem@debian.org>
+
+	* dpkg-scanpackages.1: Document that gzipped files are also used by
+	apt.
+
 2007-09-08  A. Costa  <agcosta@gis.net>
 
 	* dpkg-deb.1: Fix typo ('seperated' -> 'separated').
