--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,8 @@ dpkg (1.14.7) UNRELEASED; urgency=low
   [ Guillem Jover ]
   * Add back $dpkglib into @INC, needed by the controllib.pl require in
     822-date. Closes: #440962
-  * Document in dpkg-scanpackages that apt now requires Packages.bz2 instead
-    of Packages.gz. Closes: #440973
+  * Document in dpkg-scanpackages that apt now requires Packages.bz2 in
+    preference to Packages.gz. Closes: #440973
   * Stop recognizing the obsolete Optional field when building packages.
   * Use fakeroot, if present, by default to gain root privileges in
     dpkg-buildpackage.
