--- a/man/dpkg-scanpackages.1
+++ b/man/dpkg-scanpackages.1
@@ -13,7 +13,7 @@
 .\" You should have received a copy of the GNU General Public
 .\" License along with dpkg; if not, write to the Free Software
 .\" Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
-.TH dpkg\-scanpackages 1 "2007-09-06" "Debian Project" "dpkg utilities"
+.TH dpkg\-scanpackages 1 "2007-09-08" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-scanpackages \- create Packages index files
 .
@@ -44,7 +44,9 @@ If you want to access the generated Packages file with
 .B apt
 you will probably need to compress the file with
 .BR bzip2 (1)
-(generating a Packages.bz2 file). apt ignores uncompressed Packages
+(generating a Packages.bz2 file) or
+.BR gzip (1)
+(generatinc a Packages.gz file). apt ignores uncompressed Packages
 files except on local access (i.e.
 .B file://
 sources).
