Nightly changelog police patrol

--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,6 +1,6 @@
-2007-08-30  Peter Karlsson <peterk@debian.org>
+2007-08-30  Peter Karlsson  <peterk@debian.org>
 
-	* LINGUAS, sv.po: Added Swedish
+	* LINGUAS, sv.po: Added Swedish.
 
 2007-08-18  Guillem Jover  <guillem@debian.org>
 
