--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,22 +1,22 @@
-2007-09-06  Miguel Figueiredo <elmig@debianpt.org>
+2007-09-06  Miguel Figueiredo  <elmig@debianpt.org>
 
-	* pt.po: Updated to 929t
+	* pt.po: Updated to 929t.
 
 2007-09-04  Frédéric Bothamy  <frederic.bothamy@free.fr>
 
-	* fr.po: Updated to 929t
+	* fr.po: Updated to 929t.
 
 2007-09-02  Sven Joachim  <svenjoac@gmx.de>
 
-	* de.po: Updated to 929t
+	* de.po: Updated to 929t.
 
 2007-09-02  Clytie Siddall  <clytie@riverland.net.au>
 
-	* vi.po: Updated to 929t
+	* vi.po: Updated to 929t.
 
 2007-08-26  Shiva Prasad Pokharel  <pokharelshiv@gmail.com>
 
-	* ne.po: Updated to 903t23f3u. 
+	* ne.po: Updated to 903t23f3u.
 
 2007-08-25  Peter Karlsson  <peterk@debian.org>
 
@@ -29,7 +29,7 @@
 
 2007-08-14  Robert Luberda  <robert@debian.org>
 
-        * pl.po: Updated to 921t.
+	* pl.po: Updated to 921t.
 
 2007-08-06  Yuri Kozlov  <kozlov.y@gmail.com>
 
@@ -57,11 +57,11 @@
 
 2007-06-18  Ivar Smolin  <okul@linux.ee>
 
-	* et.po: Updated to 463t458u
+	* et.po: Updated to 463t458u.
 
 2007-06-05  Ivar Smolin  <okul@linux.ee>
 
-	* et.po: Updated to 441t480u
+	* et.po: Updated to 441t480u.
 
 2007-06-01  Clytie Siddall  <clytie@riverland.net.au>
 
