Update German man page translation to 1254t135f

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-09  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po/de.po: Updated to 1254t135f.
+
 2007-09-08  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-scanpackages.1: Document that gzipped files are also used by
