--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,7 @@ dpkg (1.14.7) UNRELEASED; urgency=low
 
   [ Updated man pages translations ]
   * Swedish (Peter Karlsson).
+  * German (Helge Kreutzmann).
 
  -- Guillem Jover <guillem@debian.org>  Thu, 06 Sep 2007 03:42:40 +0300
 
