Updated Romanian translation of dpkg

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,7 @@ dpkg (1.14.7) UNRELEASED; urgency=low
   * Nepali (Shiva Prasad Pokharel). Closes: #437825
   * Vietnamese (Clytie Siddall). Closes: #440502
   * Danish (Claus Hindsgaul). Closes: #441106
+  * Romanian (Eddy Petrișor).
 
   [ Updated man pages translations ]
   * Swedish (Peter Karlsson).
