--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-13  Peter Karlsson  <peterk@debian.org>
+
+	* po/sv.add: Fixed typo.
+
 2007-08-31  Guillem Jover  <guillem@debian.org>
 
 	* deb-control.5: Document Tag field.
