Remove duplicate nested conditional and move its cotents to the outer one

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-18  Guillem Jover  <guillem@debian.org>
+
+	* src/remove.c (deferred_remove): Remove duplicate nested conditional,
+	and move its contents to the outer one.
+
 2007-09-14  Brian M. Carlson  <sandals@crustytoothpaste.ath.cx>
 
 	* src/remove.c (deferred_remove): Store the previous package status
