Properly warn when the child process received a signal

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-09-18  Guillem Jover  <guillem@debian.org>
 
+	* lib/mlib.c (checksubprocerr): Warn instead of erroring out in case
+	of receiving a signal and having been asked to only warn.
+
+2007-09-18  Guillem Jover  <guillem@debian.org>
+
 	* src/remove.c (deferred_remove): Remove duplicate nested conditional,
 	and move its contents to the outer one.
 
