Korean translation updates

--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-09-19  Sunjae Park  <darehanl@gmail.com>
+
+	* ko.po: Updated to 285t.
+
 2007-08-18  Guillem Jover  <guillem@debian.org>
 
 	* *.po: Merged with dselect.pot.
