Dpkg.pm: Make regex for $progname more robust
While it is not very common to have $0 contain no
'/', it may happen on occasion (after all it happened to
me ;).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-20  Frank Lichtenheld  <djpig@debian.org>
+
+	* scripts/Dpkg.pm: Make the regex for determining
+	$progname more robust.
+
 2007-09-18  Guillem Jover  <guillem@debian.org>
 
 	* lib/mlib.c (checksubprocerr): Warn instead of erroring out in case
