--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,12 @@
 
 	* scripts/Dpkg.pm: Make the regex for determining
 	$progname more robust.
+	
+	* scripts/dpkg-buildpackage.sh: Move to...
+	* scripts/dpkg-buildpackage.pl: Convert from
+	Shell to Perl.
+	* scripts/Makefile.am: Adapt to move.
+	* scripts/po/POTFILES.in: Add dpkg-buildpackage.pl.
 
 2007-09-18  Guillem Jover  <guillem@debian.org>
 
