--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ dpkg (1.14.7) UNRELEASED; urgency=low
 
   [ Frank Lichtenheld ]
   * Add _MTN to dpkg-source -i default regex. Suggested by Jari Aalto.
+  * Convert dpkg-buildpackage to a Perl script.
 
   [ Updated dpkg translations ]
   * Basque (Piarres Beobide). Closes: #440859
@@ -35,7 +36,7 @@ dpkg (1.14.7) UNRELEASED; urgency=low
   * Swedish (Peter Karlsson).
   * Korean (Sunjae Park). Closes: #443191
 
- -- Frank Lichtenheld <djpig@debian.org>  Sun, 23 Sep 2007 01:22:24 +0200
+ -- Frank Lichtenheld <djpig@debian.org>  Sun, 23 Sep 2007 02:40:20 +0200
 
 dpkg (1.14.6) unstable; urgency=low
 
