--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-23  Frank Lichtenheld  <djpig@debian.org>
+
+	* dpkg-dev.pot: Regenerated.
+	* *.po: Merged with dpkg-dev.pot.
+
 2007-08-30  Peter Karlsson  <peterk@debian.org>
 
 	* LINGUAS, sv.po: Added Swedish.
