--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-23  Frank Lichtenheld  <djpig@debian.org>
+
+	* dpkg-buildpackage.1: Document the new -j
+	option.
+
 2007-09-23  Peter Karlsson  <peterk@debian.org>
 
 	* po/sv.add: Fixed typo.
