--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -5,7 +5,39 @@
 
 2007-09-20  Christian Perrier  <bubulle@debian.org>
 
-	* fr.po: Typo correcion
+	* fr.po: Typo correction
+
+2007-08-30  Peter Karlsson  <peterk@debian.org>
+
+	* LINGUAS, sv.po: Added Swedish.
+
+2007-08-18  Guillem Jover  <guillem@debian.org>
+
+	* dpkg-dev.pot: Regenerated.
+	* *.po: Merged with dpkg-dev.pot.
+
+2007-07-08  Frédéric Bothamy  <frederic.bothamy@free.fr>
+
+	* fr.po: Proofread.
+
+2007-07-06  Christian Perrier  <bubulle@debian.org>
+
+	* fr.po: Re-re-re-re-completed (438t).
+
+2007-07-02  Frank Lichtenheld  <djpig@debian.org>
+
+	* dpkg-dev.pot: Regenerated.
+	* *.po: Merged with dpkg-dev.pot.
+
+2007-05-24  Guillem Jover  <guillem@debian.org>
+
+	* dpkg-dev.pot: Regenerated.
+	* *.po: Merged with dpkg-dev.pot.
+
+2007-05-15  Guillem Jover  <guillem@debian.org>
+
+	* dpkg-dev.pot: Regenerated.
+	* *.po: Merged with dpkg-dev.pot.
 
 2007-05-11  Frédéric Bothamy  <frederic.bothamy@free.fr>
 
