Let dpkg-shlibdeps be smarter about missing symbols
dpkg-shlibdeps complains about missing symbols only for executables
(as defined by the ELF type) and public libraries (as defined by the
ELF type and the existence of a SONAME). This avoids many warnings
for perl modules and python modules.

--- a/scripts/t/200_Dpkg_Shlibs/objdump.libc6-2.3
+++ b/scripts/t/200_Dpkg_Shlibs/objdump.libc6-2.3
@@ -1,5 +1,8 @@
 
 /lib/libc.so.6:     file format elf32-i386
+architecture: i386, flags 0x00000150:
+HAS_SYMS, DYNAMIC, D_PAGED
+start address 0x000161b0
 
 Program Header:
     PHDR off    0x00000034 vaddr 0x00000034 paddr 0x00000034 align 2**2
