--- a/scripts/t/200_Dpkg_Shlibs/objdump.libc6-2.6
+++ b/scripts/t/200_Dpkg_Shlibs/objdump.libc6-2.6
@@ -1,5 +1,8 @@
 
 /lib/libc.so.6:     file format elf32-i386
+architecture: i386, flags 0x00000150:
+HAS_SYMS, DYNAMIC, D_PAGED
+start address 0x000161b0
 
 Program Header:
     PHDR off    0x00000034 vaddr 0x00000034 paddr 0x00000034 align 2**2
