dpkg-source: Allow -I without a pattern
This loads a default list of pattern mostly similar to
the default regexp of -i.

--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,15 @@
 	* scripts/dpkg-buildpackage.pl ($warnable_errors): Rename to ...
 	($warnable_error): ... this, and declare as 'our'.
 
+2007-09-24  Jari Aalto  <jari.aalto@cante.net>
+            Frank Lichtenheld  <djpig@debian.org>
+
+	* scripts/dpkg-source.pl: Allow use of -I
+	without filename pattern and load a list
+	of default patterns which is in effect as
+	similar as possible to the default regexp
+	of -i.
+
 2007-09-23  Frank Lichtenheld  <djpig@debian.org>
 
 	* scripts/dpkg-buildpackage.pl: Add new option
