--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-24  Jari Aalto  <jari.aalto@cante.net>
+
+	* dpkg-source.1: Document new behaviour
+	of -I option.
+
 2007-09-23  Frank Lichtenheld  <djpig@debian.org>
 
 	* dpkg-buildpackage.1: Document the new -j
