dpkg-buildpackage: Fix typo in usage
s/dpkg-genchangs/dpkg-genchanges/

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-09-24  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-buildpackage.pl (usage): Fix typo
+	s/dpkg-genchangs/dpkg-genchanges/.
+
+2007-09-24  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-buildpackage.pl ($warnable_errors): Rename to ...
 	($warnable_error): ... this, and declare as 'our'.
 
