dpkg-buildpackage: Do not use absolute path for 'rm' in signfile

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-09-24  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-buildpackage.pl (signfile): Do not use absolute path
+	for 'rm'.
+
+2007-09-24  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-buildpackage.pl (usage): Fix typo
 	s/dpkg-genchangs/dpkg-genchanges/.
 
