--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,8 @@ dpkg (1.14.7) UNRELEASED; urgency=low
   * Allow dpkg-source -I without a pattern which will load a default
     list of pattern similar to -i without regexp. Patch by
     Jari Aalto. Closes: #440972
+  * Rework documentation of dpkg-source's -i and -I options.
+    Closes: #323911, #440956
 
   [ Updated dpkg translations ]
   * Basque (Piarres Beobide). Closes: #440859
