--- a/debian/changelog
+++ b/debian/changelog
@@ -77,7 +77,7 @@ dpkg (1.14.7~newshlib) experimental; urgency=low
   [ Updated scripts translations ]
   * Correct a typo in the French translation. Closes: #443276
 
- -- Frank Lichtenheld <djpig@debian.org>  Sun, 23 Sep 2007 02:40:20 +0200
+ -- Raphael Hertzog <hertzog@debian.org>  Tue, 25 Sep 2007 08:43:45 +0200
 
 dpkg (1.14.6) unstable; urgency=low
 
