dpkg-buildpackage: Handle an empty rootcommand correctly
(withecho): Remove empty strings at the begin of the command array.
These can be caused by e.g. an emtpy $rootcommando. It is easiest to
filter them out here.

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,8 @@ dpkg (1.14.7) UNRELEASED; urgency=low
   [ Frank Lichtenheld ]
   * Add _MTN to dpkg-source -i default regex. Suggested by Jari Aalto.
   * Convert dpkg-buildpackage to a Perl script.
+    Fix some bugs in the new script detected in experimental:
+    Closes: #444362
   * dpkg-buildpackage accepts a -j<n> option now which will set
     MAKEFLAGS(-j<n>) and DEB_BUILD_OPTIONS(parallel=<n>) accordingly.
     parallel=<n> in DEB_BUILD_OPTIONS will be passed to MAKEFLAGS as
