--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-09-28  Frank Lichtenheld  <djpig@debian.org>
+
+	* scripts/dpkg-buildpackage.pl (withecho): Remove
+	empty strings at the begin of the command array.
+	These can be caused by e.g. an emtpy $rootcommando.
+	It is easiest to filter them out here.
+
 2007-09-24  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-buildpackage.pl (signfile): Do not use absolute path
