dpkg-buildpackage: Document fakeroot being the new default for -r

--- a/man/dpkg-buildpackage.1
+++ b/man/dpkg-buildpackage.1
@@ -1,4 +1,4 @@
-.TH dpkg\-buildpackage 1 "2007-07-18" "Debian Project" "dpkg utilities"
+.TH dpkg\-buildpackage 1 "2007-09-28" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-buildpackage \- build binary or source packages from sources
 .
@@ -114,7 +114,8 @@ When
 needs to execute part of the build process as root, it prefixes the
 command it executes with
 .I gain-root-command
-if one has been specified.
+if one has been specified. Otherwise, if none has been specified,
+\fBfakeroot\fP will be used by default, if the command is present.
 .I gain-root-command
 should be the name of a program on the
 .B PATH
