dpkg-buildpackage: Check if rootcommand is present and error otherwise

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-10-07  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-buildpackage.pl: Warn if run as root and $rootcommand
+	has been specified. Error if run as non-root and $rootcommand is not
+	found.
+
+2007-10-07  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-buildpackage.pl (usage): Remove details about running
 	fakeroot only if it's available.
 
