Updated Swedish manual page translation.

--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-09-14 07:37+0300\n"
-"PO-Revision-Date: 2007-09-05 13:04+0100\n"
+"PO-Revision-Date: 2007-09-28 07:47+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -4755,9 +4755,9 @@ msgstr "dpkg-deb"
 # type: TH
 #: ../../man/dpkg-deb.1:1 ../../man/dpkg-scanpackages.1:16
 #: ../../man/start-stop-daemon.8:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2007-09-08"
-msgstr "2007-03-08"
+msgstr "2007-09-08"
 
 # type: Plain text
 #: ../../man/dpkg-deb.1:4
@@ -4902,7 +4902,6 @@ msgstr "B<-W>, B<--show> I<arkiv>"
 
 # type: Plain text
 #: ../../man/dpkg-deb.1:101
-#, fuzzy
 msgid ""
 "Provides information about a binary package archive in the format specified "
 "by the B<--showformat> argument. The default format displays the package's "
@@ -6549,7 +6548,6 @@ msgstr ""
 
 # type: Plain text
 #: ../../man/dpkg-scanpackages.1:53
-#, fuzzy
 msgid ""
 "B<Note:> If you want to access the generated Packages file with B<apt> you "
 "will probably need to compress the file with B<bzip2>(1)  (generating a "
@@ -6558,7 +6556,8 @@ msgid ""
 "sources)."
 msgstr ""
 "B<Observera:> Om du vill läsa den skapade Packages-filen med B<apt> måste du "
-"antagligen komprimera filen med B<gzip>(1) (vilket skapar filen Packages."
+"antagligen komprimera filen med B<bzip2>(1) (vilket skapar filen Packages.bz2) "
+"eller B<gzip>(1) (vilket skapar filen Packages."
 "gz). apt ignorerar okomprimerade Packages-filer, förutom vid lokal åtkomst "
 "(dvs. B<file://>-källor)."
 
@@ -10156,7 +10155,6 @@ msgstr "B<-b>, B<--background>"
 
 # type: Plain text
 #: ../../man/start-stop-daemon.8:217
-#, fuzzy
 msgid ""
 "Typically used with programs that don't detach on their own. This option "
 "will force B<start-stop-daemon> to fork before starting the process, and "
