--- a/debian/changelog
+++ b/debian/changelog
@@ -49,6 +49,7 @@ dpkg (1.14.7) UNRELEASED; urgency=low
 
   [ Updated scripts translations ]
   * Correct a typo in the French translation. Closes: #443276
+  * Swedish (Peter Karlsson).
 
  -- Frank Lichtenheld <djpig@debian.org>  Sun, 23 Sep 2007 02:40:20 +0200
 
