Fully translate Swedish PO file for scripts.

--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,6 +1,6 @@
 2007-09-28  Peter Karlsson  <peterk@debian.org>
 
-	* sv.po: Updated Swedish to 461t1u.
+	* sv.po: Updated Swedish to 462t.
 
 2007-09-23  Frank Lichtenheld  <djpig@debian.org>
 
