--- a/scripts/po/sv.po
+++ b/scripts/po/sv.po
@@ -437,6 +437,47 @@ msgid ""
 "  -h, --help     show this help message.\n"
 "      --version  show the version.\n"
 msgstr ""
+"\n"
+"Använd: %s [<flaggor> ...]\n"
+"\n"
+"Flaggor:\n"
+"  -r<få-root-kommando>\n"
+"                 kommando för att få root-behörighet (standard är fakeroot\n"
+"                 om det finns).\n"
+"  -p<signeringskommando>\n"
+"  -d             kontrollera inte byggberoenden och -konflikter.\n"
+"  -D             kontrollera byggberoenden och -konflikter.\n"
+"  -k<nyckelid>   nyckeln som skall användas vid signering.\n"
+"  -sgpg          signeringskommandot anropas som GPG.\n"
+"  -spgp          signeringskommandot anropas som PGP.\n"
+"  -us            osignerad källkod.\n"
+"  -uc            osignerad changes-fil.\n"
+"  -a<arch>       Debianarkitektur vi bygger för (implicerar -d).\n"
+"  -b             endast binär, bygger inte källkod.  } sänds även till\n"
+"  -B             endast binär, inga ark-ober. filer. } dpkg-genchanges\n"
+"  -S             endast källkod, inga binärfiler     }\n"
+"  -t<system>     välj GNU-systemtyp.           } sänds till dpkg-"
+"architecture\n"
+"  -v<version>    ändringar sedan version <version>.     }\n"
+"  -m<ansvarig>   ansvarig för paketet är <ansvarig>.   }\n"
+"  -e<ansvarig>   ansvarig för utgivningen är <maint>.  } sänds bara\n"
+"  -C<ändrfil>    ändringar beskrivs i <ändrfil>.       } till dpkg-genchangs\n"
+"  -si (standard) källk innehåller orig. för rev. 0/1.  }\n"
+"  -sa            insänd källkod innehåller alltid orig.}\n"
+"  -sd            insänd källkod är endast diff och .dsc}\n"
+"  -sn            force Debian native source format.      } only passed\n"
+"  -s[sAkurKUR]   see dpkg-source for explanation.        } to dpkg-source\n"
+"  -nc            do not clean source tree (implies -b).\n"
+"  -tc            clean source tree when finished.\n"
+"  -ap            add pause before starting signature process.\n"
+"  -W             turn certain errors into warnings.       } passed to\n"
+"  -E             when -W is turned on, -E turns it off.   } dpkg-source\n"
+"  -i[<regex>]    ignore diffs of files matching regex.    } only passed\n"
+"  -I<filename>   filter out files when building tarballs. } to dpkg-source\n"
+"  --admindir=<directory>\n"
+"                 change the administrative directory.\n"
+"  -h, --help     show this help message.\n"
+"      --version  show the version.\n"
 
 #: scripts/dpkg-buildpackage.pl:152 scripts/dpkg-buildpackage.pl:162
 #: scripts/dpkg-buildpackage.pl:169 scripts/dpkg-buildpackage.pl:175
