--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2007-09-29  Frank Lichtenheld  <djpig@debian.org>
+
+	* scripts/dpkg-buildpackage.pl (signfile): Call
+	gpg with --utf8-strings since otherwise the key
+	lookup fails with non-ASCII UTF8-encoded names.
+	Since Debian changelogs should be UTF8 encoded,
+	this is probably the more sane default. This
+	will probably break if one uses a non-UTF8 locale
+	and tries to give a uid on the commandline that
+	contains non-ASCII chars. I think we can live with
+	that.
+
 2007-09-28  Frank Lichtenheld  <djpig@debian.org>
 
 	* scripts/dpkg-buildpackage.pl (withecho): Remove
