--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,9 @@ dpkg (1.14.7) UNRELEASED; urgency=low
     Jari Aalto. Closes: #440972
   * Rework documentation of dpkg-source's -i and -I options.
     Closes: #323911, #440956
+  * Add --utf8-strings to gpg call in dpkg-buildpackage since
+    that seems to be the better default. Suggested by Székelyi Szabolcs.
+    Closes: #379418
 
   [ Updated dpkg translations ]
   * Basque (Piarres Beobide). Closes: #440859
