dpkg-buildpackage: Make the testcommand more sensible
Instead of testing /usr/bin/$cmd, test `which $cmd`.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-09-29  Frank Lichtenheld  <djpig@debian.org>
 
+	* scripts/dpkg-buildpackage.pl (testcommand):
+	Make the check more sensible. Instead of testing
+	/usr/bin/$cmd, test `which $cmd`.
+
 	* scripts/dpkg-buildpackage.pl (signfile): Call
 	gpg with --utf8-strings since otherwise the key
 	lookup fails with non-ASCII UTF8-encoded names.
