dpkg-genchanges/dpkg-buildpackages: Add new -A option
Logical opposite of -B, will only build arch-indep
packages (dpkg-buildpackage), only include arch-indep
packages in the .changes file (dpkg-genchanges).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,12 @@
 2007-12-05  Frank Lichtenheld  <djpig@debian.org>
+
+	* scripts/dpkg-buildpackage.pl: Add new
+	-A option (passed to dpkg-genchanges).
+	* scripts/dpkg-genchanges.pl: Add new -A
+	option that will include only arch-indep
+	packages into the upload.
+
+2007-12-05  Frank Lichtenheld  <djpig@debian.org>
 	    Goswin von Brederlow  <brederlo@informatik.uni-tuebingen.de>
 	    Bastian Blank  <waldi@debian.org>
 
