dpkg-source.1: Remove superfluous [options] from -b command description

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-30  Frank Lichtenheld  <djpig@debian.org>
+
+	* dpkg-source.1: Remove superfluous [options] from
+	-b command description.
+
 2007-09-28  Peter Karlsson  <peter@softwolves.pp.se>
 
 	* po/sv.po: Updated to 1290t.
