deb-control.5: Remove obsolete sentence
The Priority and Section field have nothing to do with
the archive layout since woody.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,5 +1,10 @@
 2007-09-30  Frank Lichtenheld  <djpig@debian.org>
 
+	* deb-control.5: Remove obsolete sentence regarding
+	the role of the Priority and Section field. They
+	have nothing to do with the archive layout since
+	woody.
+
 	* dpkg-source.1: Remove superfluous [options] from
 	-b command description.
 
